Fix jumping login modal

--- a/src/client/app/core/login-modal/login-modal.component.scss
+++ b/src/client/app/core/login-modal/login-modal.component.scss
@@ -2,7 +2,7 @@
 @import './login-modal.component.debug';
 
 // TODO: Refactor
-.click-off-overlay {
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
@@ -11,19 +11,18 @@
   z-index: 10001;
   background: rgba($black, 0.8);
   background: radial-gradient(ellipse closest-side, rgba($black, 0.7) 1%, rgba($black, 0.8) 100%);
+  overflow-y: scroll;
   display: block;
   opacity: 1;
 }
 
 .modal-wrapper {
-  position: absolute;
-  top: 0;
+  position: relative;
   left: 50%;
   margin-top: 80px;
   margin-bottom: 80px;
   width: 400px;
   margin-left: -200px;
-  z-index: 10002;
 }
 
 .close-button-wrapper {
